--- a/src/mastermind/gui/fxml/GameBoard.fxml
+++ b/src/mastermind/gui/fxml/GameBoard.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mastermind.controllers.GameBoard">
    <children>
-      <ImageView fx:id="img" fitHeight="661.0" fitWidth="761.0" layoutX="40.0" layoutY="-32.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-7.79632568359375" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="-32.0">
+      <ImageView fx:id="img" fitHeight="661.0" fitWidth="761.0" layoutX="41.0" layoutY="-56.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-5.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="44.46600341796875" AnchorPane.topAnchor="-56.0">
          <image>
             <Image url="@../img/background/GameBoard.png" />
          </image>
@@ -21,29 +21,33 @@
       <Button fx:id="blueButton" layoutX="290.0" layoutY="124.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: royalblue;" />
       <Button fx:id="redButton" layoutX="290.0" layoutY="85.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: crimson;" />
       <Button fx:id="greenButton" layoutX="290.0" layoutY="47.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: seagreen;" />
-      <Button fx:id="resetButton" layoutX="286.0" layoutY="291.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white" />
-      <Button fx:id="checkButton" layoutX="286.0" layoutY="341.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white" />
-      <ImageView fitHeight="28.0" fitWidth="25.0" layoutX="296.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../img/icons/reset.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="22.0" layoutX="297.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../img/icons/check.png" />
-         </image>
-      </ImageView>
-      <GridPane fx:id="guessGrid" layoutX="372.0" layoutY="32.0" prefHeight="439.0" prefWidth="134.0">
+      <Button fx:id="resetButton" layoutX="286.0" layoutY="295.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white">
+         <graphic>
+            <ImageView fitHeight="28.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/icons/reset.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button fx:id="checkButton" layoutX="286.0" layoutY="354.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white">
+         <graphic>
+            <ImageView fitHeight="25.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/icons/check.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <GridPane fx:id="guessGrid" layoutX="373.0" layoutY="32.0" prefHeight="439.0" prefWidth="129.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="44.83332824707031" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="44.16667175292969" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="44.83332824707031" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="44.16667175292969" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="43.83332824707031" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="44.83331298828125" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="59.5" minHeight="10.0" prefHeight="42.833343505859375" vgrow="SOMETIMES" />
@@ -51,6 +55,34 @@
             <RowConstraints maxHeight="59.5" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="48.166656494140625" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="createGrid" layoutX="357.0" layoutY="481.0" prefHeight="49.0" prefWidth="136.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="responseGrid" layoutX="506.0" layoutY="29.0" prefHeight="439.0" prefWidth="58.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="46.5" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="37.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="47.5" minHeight="7.5" prefHeight="47.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="38.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.5" minHeight="10.0" prefHeight="32.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="44.5" minHeight="6.0" prefHeight="39.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
    </children>
